brain/sources/prod-metadata/objects/Employee_Leave__c/Employee_Leave__c.object-meta.xml
<CustomObject>
    <description>Employee leave records</description>
    <label>Employee Leave</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Employee Leave Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Leaves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>