brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Attachment_Required__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if supporting document is required (e.g., SL 3+ days, maternity/adoption, etc.)</description>
    <label>Attachment Required</label>
    <type>Checkbox</type>
</CustomField>