brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>