brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Employee Leaves (Employee)</relationshipLabel>
    <relationshipName>Employee_Leaves</relationshipName>
    <type>Lookup</type>
</CustomField>