brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employeess</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Leaves</relationshipName>
    <type>Lookup</type>
</CustomField>