brain/sources/prod-metadata/objects/Employee_Leave__c/fields/From_Session__c.field-meta.xml
<CustomField>
    <fullName>From_Session__c</fullName>
    <label>From Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Half</fullName>
            </value>
            <value>
                <fullName>Second Half</fullName>
            </value>
            <value>
                <fullName>Full Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>