brain/sources/prod-metadata/objects/Employee_Leave__c/fields/HR_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>HR_Approved_On__c</fullName>
    <description>Date/Time audit field for HR approval timestamp.</description>
    <label>HR Approved On</label>
    <type>DateTime</type>
</CustomField>