brain/sources/prod-metadata/objects/Employee_Leave__c/fields/HR_Approver__c.field-meta.xml
<CustomField>
    <fullName>HR_Approver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>HR approver - Lookup to Recruiter__c</description>
    <label>HR Approver</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>HR Approved Leaves</relationshipLabel>
    <relationshipName>HR_Approved_Leaves</relationshipName>
    <type>Lookup</type>
</CustomField>