brain/sources/prod-metadata/objects/Employee_Leave__c/fields/HR_Requirement_Reason__c.field-meta.xml
<CustomField>
    <fullName>HR_Requirement_Reason__c</fullName>
    <description>Reason HR approval is required</description>
    <label>HR Requirement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Late Request</fullName>
            </value>
            <value>
                <fullName>Insufficient Balance</fullName>
            </value>
            <value>
                <fullName>Special Leave</fullName>
            </value>
            <value>
                <fullName>Comp-Off</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>