brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Is_Full_Day__c.field-meta.xml
<CustomField>
    <fullName>Is_Full_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Full Day</label>
    <type>Checkbox</type>
</CustomField>