brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Is_Half_Day__c.field-meta.xml
<CustomField>
    <fullName>Is_Half_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for half-day leave requests</description>
    <label>Is Half Day</label>
    <type>Checkbox</type>
</CustomField>