brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Is_HR_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_HR_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag when HR approval is required (late request / insufficient balance / certain leave types)</description>
    <label>Is HR Approval Required</label>
    <type>Checkbox</type>
</CustomField>