brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Is_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Is_Unpaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if leave is unpaid</description>
    <label>Is Unpaid</label>
    <type>Checkbox</type>
</CustomField>