brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Leave_Applied_By__c.field-meta.xml
<CustomField>
    <fullName>Leave_Applied_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Applied By</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Employee Leaves (Leave Applied By)</relationshipLabel>
    <relationshipName>Applied_Leaves</relationshipName>
    <type>Lookup</type>
</CustomField>