brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Leave_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Leave_Event_Id__c</fullName>
    <label>Leave Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>