brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Leave_Reason__c.field-meta.xml
<CustomField>
    <fullName>Leave_Reason__c</fullName>
    <label>Leave Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>