brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PTO</fullName>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
            <value>
                <fullName>Unpaid (LOP/LWP)</fullName>
            </value>
            <value>
                <fullName>Comp-Off Availed</fullName>
            </value>
            <value>
                <fullName>Marriage</fullName>
            </value>
            <value>
                <fullName>Paternity</fullName>
            </value>
            <value>
                <fullName>Maternity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other (HR Only)</fullName>
                <isActive>false</isActive>
                <label>Other (HR Only)</label>
            </value>
            <value>
                <fullName>Planned</fullName>
                <isActive>false</isActive>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Training</fullName>
                <isActive>false</isActive>
                <label>Training</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>