brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Leave_Year__c.field-meta.xml
<CustomField>
    <fullName>Leave_Year__c</fullName>
    <description>Calendar year of the leave; useful for carry forward and encashment</description>
    <label>Leave Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>