brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Manager_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approved_On__c</fullName>
    <description>Date/Time audit field for manager approval timestamp.</description>
    <label>Manager Approved On</label>
    <type>DateTime</type>
</CustomField>