brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Manager_Approver__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Approver</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>Employee Leaves (Manager Approver)</relationshipLabel>
    <relationshipName>Manager_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>