brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Notice_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Notice_Compliance__c</fullName>
    <description>Compliance status of notice given vs requirement</description>
    <label>Notice Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Time</fullName>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>