brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Notice_Given_Days__c.field-meta.xml
<CustomField>
    <fullName>Notice_Given_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Days of notice actually given (StartDate - RequestDate)</description>
    <label>Notice Given (Days)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>