brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Notice_Required_Days__c.field-meta.xml
<CustomField>
    <fullName>Notice_Required_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Required notice period (days) based on PTO matrix/policy</description>
    <label>Notice Requirement (Days)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>