brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Paid_Days__c.field-meta.xml
<CustomField>
    <fullName>Paid_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>What gets deducted from balance</description>
    <label>Paid Days</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>