brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Partial_Day_Type__c.field-meta.xml
<CustomField>
    <fullName>Partial_Day_Type__c</fullName>
    <description>Type of partial day leave (First Half / Second Half / Time Range)</description>
    <label>Partial Day Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Half</fullName>
                <default>true</default>
                <label>First Half</label>
            </value>
            <value>
                <fullName>Second Half</fullName>
            </value>
            <value>
                <fullName>Time Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>