brain/sources/prod-metadata/objects/Employee_Leave__c/fields/PTO_Balance_At_Request__c.field-meta.xml
<CustomField>
    <fullName>PTO_Balance_At_Request__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Audit snapshot of PTO balance at time of request</description>
    <label>Balance Snapshot (PTO)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>