brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Provide the reason when the leave request is rejected.</description>
    <label>Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>