brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who submitted</description>
    <label>Requested By</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>Employee Leaves (Requested By)</relationshipLabel>
    <relationshipName>Requested_Leaves</relationshipName>
    <type>Lookup</type>
</CustomField>