brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Requested_On__c.field-meta.xml
<CustomField>
    <fullName>Requested_On__c</fullName>
    <description>When employee submitted the leave request</description>
    <label>Requested On</label>
    <type>DateTime</type>
</CustomField>