brain/sources/prod-metadata/objects/Employee_Leave__c/fields/SL_Balance_At_Request__c.field-meta.xml
<CustomField>
    <fullName>SL_Balance_At_Request__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Audit snapshot of SL balance at time of request</description>
    <label>Balance Snapshot (SL)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>