brain/sources/prod-metadata/objects/Employee_Leave__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12:00 AM</fullName>
                <default>true</default>
                <label>12:00 AM</label>
            </value>
            <value>
                <fullName>12:15 AM</fullName>
            </value>
            <value>
                <fullName>12:30 AM</fullName>
            </value>
            <value>
                <fullName>12:45 AM</fullName>
            </value>
            <value>
                <fullName>01:00 AM</fullName>
            </value>
            <value>
                <fullName>01:15 AM</fullName>
            </value>
            <value>
                <fullName>01:30 AM</fullName>
            </value>
            <value>
                <fullName>01:45 AM</fullName>
            </value>
            <value>
                <fullName>02:00 AM</fullName>
            </value>
            <value>
                <fullName>02:15 AM</fullName>
            </value>
            <value>
                <fullName>02:30 AM</fullName>
            </value>
            <value>
                <fullName>02:45 AM</fullName>
            </value>
            <value>
                <fullName>03:00 AM</fullName>
            </value>
            <value>
                <fullName>03:15 AM</fullName>
            </value>
            <value>
                <fullName>03:30 AM</fullName>
            </value>
            <value>
                <fullName>03:45 AM</fullName>
            </value>
            <value>
                <fullName>04:00 AM</fullName>
            </value>
            <value>
                <fullName>04:15 AM</fullName>
            </value>
            <value>
                <fullName>04:30 AM</fullName>
            </value>
            <value>
                <fullName>04:45 AM</fullName>
            </value>
            <value>
                <fullName>05:00 AM</fullName>
            </value>
            <value>
                <fullName>05:15 AM</fullName>
            </value>
            <value>
                <fullName>05:30 AM</fullName>
            </value>
            <value>
                <fullName>05:45 AM</fullName>
            </value>
            <value>
                <fullName>06:00 AM</fullName>
            </value>
            <value>
                <fullName>06:15 AM</fullName>
            </value>
            <value>
                <fullName>06:30 AM</fullName>
            </value>
            <value>
                <fullName>06:45 AM</fullName>
            </value>
            <value>
                <fullName>07:00 AM</fullName>
            </value>
            <value>
                <fullName>07:15 AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>