brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Supporting_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Document_Link__c</fullName>
    <description>Link or reference to supporting document. Prefer Files related list; use this for external URLs if needed.</description>
    <label>Supporting Document</label>
    <type>Url</type>
</CustomField>