brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Total_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Calculated business days (or half-day)</description>
    <label>Total Days Requested</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>