brain/sources/prod-metadata/objects/Employee_Leave__c/fields/Unpaid_Days__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Salary impact (Loss of Pay)</description>
    <label>Unpaid Days (LOP)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>